# talent

./: Dockerfile  Jenkinsfile  README.md  pyproject.toml  requirements.txt  settings.yaml  setup.sh  start.sh  talentmatcher.json
src/admin/apis/: admin_services.py  profile_services.py
src/admin/config/: admin_configs.py
src/admin/helpers/: admin_helpers.py
src/admin/interfaces/: admin_interface.py  profile_interface.py
src/admin/validations/: client_category_weights_validations.py  client_registration_validations.py
src/config/: config.py  settings.py
src/db/config/: db.py
src/db/crud/admin/: auth_schema.py  clt_cat_wgt_schema.py  (+1 more)
src/routes/: main.py
src/routes/admin/: configs.py  profile_settings.py
src/routes/common/: comp_cand.py  graph.py  matchers.py  parsers.py  scorers.py  searchers.py  stats.py  submission.py
src/tests/: base_case.py  fake_client_registration.py  list_jobs_for_test.py  score_test.py  test_compare_candidates.py  test_get_candidate_resume.py  test_helpers.py  test_match_candidates_to_job.py  test_match_jobs.py  test_match_jobs_to_res.py  test_match_resms_to_res.py  test_parse_job_by_description.py  test_parse_job_by_id.py  test_search_jobs_or_resumes.py  test_search_parsed_resume.py
src/tests/admin_tests/: test_admin_services.py
src/tests/fake_resume_and_job/: test_job.docx  test_resume.docx
src/utilities/: celery.py  celery_helpers.py  custom_logging.py  exception.py  tasks.py  token.py  type.py  verify.py
static/css/: webvowl.app.css  webvowl.css
static/js/: webvowl.appnew.js
templates/: indexnew.html
(+118 files in other folders)
