[tool.poetry]
name = "Talent Matcher Service"
version = "0.1.0"
description = ""
authors = ["Raj Kumar <rajkumar.pydev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.11.6"
gunicorn = "^20.0.4"
mongoengine = "^0.20.0"
fastapi = "^0.61.1"
python-multipart = "^0.0.5"
pyjwt = "^1.7.1"
loguru = "^0.5.3"
requests = "^2.24.0"
arrow = "^0.17.0"
dynaconf = "^3.1.2"
nested-lookup = "^0.2.21"
iteration-utilities = "^0.10.1"
bs4 = "^0.0.1"
lxml = "^4.6.1"
boto3 = "^1.16.10"
Faker = "^4.14.1"
celery = "^4.3.0"
redis = "^3.5.3"
universities = "^1.1.0"
pytest-pipeline = "^0.3.0"
pytest = "^6.1.2"
python-docx = "^0.8.10"
docx2txt = "^0.8"
sendgrid = "^6.5.0"
emails = "^0.6"
aiofiles = "^0.6.0"
Jinja2 = "^2.11.3"

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.isort","autohooks.plugins.autopep8","autohooks.plugins.pylint"]

[tool.poetry.dev-dependencies]
autohooks = "^2.1.0"
autohooks-plugin-pylint = "^1.2.0"
autohooks-plugin-isort = "^1.0.0"
autopep8 = "^1.5.3"
autohooks-plugin-autopep8 = "^0.0.4"
radon = "^4.1.0"
pytest-mock = "^3.2.0"
pytest-cov = "^2.10.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"